# story-generator

./: .gitignore  LICENSE  README.md  app.py  prompt.md  pyproject.toml
pages/: composer.py
utils/: prompt.py
