[tool.poetry]
name = "story-generator"
version = "0.1.0"
description = ""
authors = ["Cândido Júnior <candidonogueirajr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
openai = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
